Added profile option into batch cost form

--- a/CWBDataApp/templates/CWBDataApp/BatchCostQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/BatchCostQuery.html
@@ -49,6 +49,7 @@
         <tr>
           <th>Batch Name</th>
           <th>Batch Date</th>
+          <th>Profile</th>
           <th>Total Cost</th>
           <th>Total Weight</th>
           <th>Price/Pound</th>
@@ -68,6 +69,7 @@
       <tr>
         <td>{{ batch.batchname }}</td>
         <td>{{ batch.batchdate }}</td>
+        <td>{{ batch.profile }}</td>
         <td>{{ batch.totalcost }}</td>
         <td>{{ batch.totalweight }}</td>
         <td>{{ batch.priceperpound }}</td>
