--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -88,7 +88,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLinkHelp" role="button" data-toggle="dropdown" aria-haspopup="true "aria-expanded="false">
-                  Help
+                  General
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkHelp">
                   <a class="dropdown-item" href="{% url 'CWBDataApp:help'%}"> General Help</a>
@@ -99,6 +99,7 @@
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateSupplier'%}"> Update Supplier</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:AddProfileAverage'%}"> Add Profile Average</a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateProfileAverage'%}"> Update Profile Average</a>
+                  <a class="dropdown-item"  href="{% url 'CWBDataApp:logout' %}">Log Out</a>
                 </div>
               </li>
               <li class="nav-item">
