Fixed product inventory error and created homepage

--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -22,7 +22,7 @@
 
       <!-- Menu bar on top of the page-->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{% url 'CWBDataApp:index' %}">
           {% load static %}
           <img  id="cwbimg" src="{% static 'CWBDataApp/images/cwbtech.jpg'%}" alt="cwbtech">
         </a>
