Fixed products inventory and order functions

--- a/CWBDataApp/templates/CWBDataApp/UpdateOrders.html
+++ b/CWBDataApp/templates/CWBDataApp/UpdateOrders.html
@@ -98,7 +98,7 @@
             <input type="text" name="orderPK" value="{{orderChange.ponumber}}" hidden>
           <br>
 
-            <input type="submit" name="chooseOrder" value="Choose">
+            <input type="submit" name="chooseOrder" value="Update">
         </div>
       </form>
     </div>
