--- a/CWBDataApp/templates/CWBDataApp/ProductInventory.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventory.html
@@ -60,7 +60,7 @@
 
         <div class="inline-flex inputBox">
           <label for="numSkids">Number of Pieces*: </label>
-          <input id="numSkids" type="number" name="numSkids" max="100000">
+          <input id="numSkids" type="number" name="numSkids" max="10000000">
         </div>
 
         <br>
