--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryQuery.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryQuery.html
@@ -49,6 +49,15 @@
   </form>
 </div>
 
+<div class="justify-content-center row no-gutters">
+  <form action="{% url 'CWBDataApp:ProductInventoryExcel'%}" method="post">
+    <div class="d-inline-flex flex-column">
+      {% csrf_token %}
+      <input type="submit" name="Download" value="Download Excel File of Entire Product Inventory">
+    </div>
+  </form>
+</div>
+
 
     {% if product %}
     <div class="queryTable justify-content-center row no-gutters">
