--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryShipped.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryShipped.html
@@ -49,7 +49,7 @@
 
       <div class="inline-flex inputBox">
         <label for="numSkids">Number of Pieces Shipped*: </label>
-        <input id="numSkids" type="number" name="numSkids" max="100">
+        <input id="numSkids" type="number" name="numSkids" max="10000000">
       </div>
 
       <br>
