--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
@@ -58,7 +58,7 @@
 
         <div class="inline-flex inputBox">
           <label for="numSkids">Number of Skids*: </label>
-          <input id="numSkids" type="number" name="numSkids" max="100000" value={{prod_object.numberofskids}}>
+          <input id="numSkids" type="number" name="numSkids" max="10000000" value={{prod_object.numberofskids}}>
         </div>
 
         <input id="prodName" type="text" name="prodName" value="{{ prod_object.productname }}" hidden>
