Fixed product inventory to use number of skids instead of pieces

--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryShipped.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryShipped.html
@@ -48,8 +48,8 @@
       </div>
 
       <div class="inline-flex inputBox">
-        <label for="numSkids">Number of Pieces Shipped*: </label>
-        <input id="numSkids" type="number" name="numSkids" max="10000000">
+        <label for="numSkids">Number of Skids Shipped*: </label>
+        <input id="numSkids" type="number" name="numSkids" step=0.1 max="1000">
       </div>
 
       <br>
