--- a/CWBDataApp/templates/CWBDataApp/ProductInventory.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventory.html
@@ -59,8 +59,8 @@
         </div>
 
         <div class="inline-flex inputBox">
-          <label for="numSkids">Number of Pieces*: </label>
-          <input id="numSkids" type="number" name="numSkids" max="10000000">
+          <label for="numSkids">Number of Skids*: </label>
+          <input id="numSkids" type="number" name="numSkids" step=0.1 max="1000">
         </div>
 
         <br>
