--- a/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventoryUpdate.html
@@ -56,9 +56,11 @@
       <div class="d-inline-flex flex-column">
         {% csrf_token %}
 
+        <div> <p> {{ prod_object.colour }} {{ prod_object.productname }} currently has {{ prod_object.numberofskids }} skids in inventory</div>
+
         <div class="inline-flex inputBox">
-          <label for="numSkids">Number of Skids*: </label>
-          <input id="numSkids" type="number" name="numSkids" max="10000000" value={{prod_object.numberofskids}}>
+          <label for="numSkids">Added Number of Skids*: </label>
+          <input id="numSkids" type="number" name="numSkids" step=0.1 max="1000">
         </div>
 
         <input id="prodName" type="text" name="prodName" value="{{ prod_object.productname }}" hidden>
