--- a/CWBDataApp/templates/CWBDataApp/ViewOrders.html
+++ b/CWBDataApp/templates/CWBDataApp/ViewOrders.html
@@ -40,6 +40,15 @@
     </form>
   </div>
 
+  <div class="justify-content-center row no-gutters">
+    <form action="{% url 'CWBDataApp:OrdersExcel'%}" method="post">
+      <div class="d-inline-flex flex-column">
+        {% csrf_token %}
+        <input type="submit" name="Download" value="Download Excel File of All Orders">
+      </div>
+    </form>
+  </div>
+
   {% if allOrders %}
   <div class="queryTable">
     <div class="tablecontainer">
