--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -78,6 +78,7 @@
                   <a class="dropdown-item" href="{% url 'CWBDataApp:OrderSheetsMachine3'%}"> Machine 3 </a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:ViewOrders'%}"> View Orders </a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateOrders'%}"> Update Orders </a>
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateDDOrders'%}"> Update DD Orders </a>
                 </div>
               </li>
               <li class="nav-item">
