--- a/CWBDataApp/templates/CWBDataApp/MaterialTesting.html
+++ b/CWBDataApp/templates/CWBDataApp/MaterialTesting.html
@@ -64,6 +64,7 @@
       <div class="inline-flex inputBox">
         <label for="machinetimeUsed">Machine Time Used: </label>
         <select id="machinetimeUsed" name="machinetimeUsed">
+          <option value="0.5">0.5</option>
           <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
