--- a/CWBDataApp/templates/CWBDataApp/base.html
+++ b/CWBDataApp/templates/CWBDataApp/base.html
@@ -42,7 +42,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkBatch">
                   <a class="dropdown-item" href="{% url 'CWBDataApp:BatchCost'%}"> Enter Batch </a>
-                  <!--<a class="dropdown-item" href="{% url 'CWBDataApp:UpdateBatch'%}"> Update Batch </a>-->
+                  <a class="dropdown-item" href="{% url 'CWBDataApp:UpdateBatch'%}"> Update Batch </a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:BatchCostQuery'%}"> Search Batch </a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:MaterialTest'%}"> Enter a Material Test </a>
                   <a class="dropdown-item" href="{% url 'CWBDataApp:MaterialTestQuery'%}"> Search for a Test </a>
