--- a/CWBDataApp/templates/CWBDataApp/ProductInventory.html
+++ b/CWBDataApp/templates/CWBDataApp/ProductInventory.html
@@ -59,8 +59,13 @@
         </div>
 
         <div class="inline-flex inputBox">
-          <label for="numSkids">Number of Skids*: </label>
-          <input id="numSkids" type="number" name="numSkids" step=0.1 max="1000">
+          <label for="numSkids">Number of Whole Skids*: </label>
+          <input id="numSkids" type="number" name="numSkids" step=any max="1000">
+        </div>
+
+        <div class="inline-flex inputBox">
+          <label for="pcs">Extra Pieces*: </label>
+          <input id="pcs" type="number" name="pcs" step=1 max="1000" value='0'>
         </div>
 
         <br>
